# jsi-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/jsi_tools/: __init__.py
src/jsi_tools/decorators/: __init__.py  log_return.py
src/jsi_tools/helpers/: __init__.py  diff.py
tests/test_decorators/: test_log_return.py
tests/test_helpers/: test_diff.py
